--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ img {
 																	<img src="images/staticpage.png " />
 										</a>
 		<a href="staticpage_2960.html"  rel="external" data-ajax="flase"  >
-				<label>StaticPage</label>
+				<label>StaticPage1</label>
 		</a>
 	</div>
 
